--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     </div>
 
     <section id="section-learnings" class="content-section" role="tabpanel" aria-labelledby="btn-learnings" hidden>
-      <h2>Learnings about The Life and Works of Rizal</h2>
+      <h2><center>Learnings about The Life and Works of Rizal</center></h2>
       <ul>
         <li><strong>Maria:</strong> Rizal’s bravery in speaking against colonial injustices was inspiring and his writings helped ignite nationalism.</li>
         <li><strong>Carlos:</strong> I learned how Rizal’s peaceful approach contrasted with other revolutionaries but was equally impactful.</li>
