--- a/index.html
+++ b/index.html
@@ -434,20 +434,24 @@
     <section id="section-learnings" class="content-section" role="tabpanel" aria-labelledby="btn-learnings" hidden>
       <h2><center>Learnings about The Life and Works of Rizal</center></h2>
       <ul>
-        <li><strong>Maria:</strong> Rizal’s bravery in speaking against colonial injustices was inspiring and his writings helped ignite nationalism.</li>
-        <li><strong>Carlos:</strong> I learned how Rizal’s peaceful approach contrasted with other revolutionaries but was equally impactful.</li>
-        <li><strong>Anna:</strong> The depth of Rizal’s skills in multiple fields like medicine and languages amazed me.</li>
-        <li><strong>Juan:</strong> Understanding Rizal’s global influence helped me appreciate Philippine history in a world context.</li>
+        <li><strong>John Wilbert Carullo:</strong> ..... </li>
+        <li><strong>Gabriel Concepcion:</strong> ........ </li>
+        <li><strong>Roinel James Llesis:</strong> .......... </li>
+        <li><strong>Carl James Poopalaretnam:</strong> ........... </li>
+        <li><strong>Feliah Hadassah Salvamante:</strong> ......... </li>
+        <li><strong>Joshua Sario:</strong> ............. </li>
       </ul>
     </section>
 
     <section id="section-members" class="content-section" role="tabpanel" aria-labelledby="btn-members" hidden>
       <h2>Members</h2>
       <ul class="member-list">
-        <li>Maria Santos</li>
-        <li>Carlos Dela Cruz</li>
-        <li>Anna Reyes</li>
-        <li>Juan Navarro</li>
+        <li>Carullo, John Wilbert</li>
+        <li>Concepcion, Gabriel</li>
+        <li>Llesis, Roinel James</li>
+        <li>Poopalaretnam, Carl James</li>
+        <li>Salvamante, Feliah Hadassah</li>
+        <li>Sario, Joshua</li>
       </ul>
     </section>
   </div>
