--- a/index.html
+++ b/index.html
@@ -461,6 +461,16 @@
     <button class="close-btn" aria-label="Close image">&times;</button>
     <img src="" alt="" />
   </div>
+  <footer class="acknowledgement" aria-label="Acknowledgement">
+    <p><center>
+      This website was created to complete the final project requirement for the course <em>The Life and Works of Rizal</em>.
+    </center>
+    </p>
+    <p><center>Developed by <b><em>Group 5</em></b></center></p>
+    <p style="font-size:0.8rem; color:#777; margin-top:6px; user-select:none;">
+      <center>&copy; 2025. All rights reserved.</center>
+    </p>
+  </footer>
 
   <script>
     (() => {
