--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
   <div id="background-overlay" aria-hidden="true"></div>
   <div class="container" role="main" aria-label="Jose Rizal Website">
     <h1>Jose Rizal</h1>
-    <p><em>Tap this image to view Jose Rizal's personal information</em></p>
+    <p><center><em>Tap this image to view Jose Rizal's personal information</em></center></p>
     <div class="flip-card" id="rizalFlipCard">
   <div class="flip-card-inner">
     <div class="flip-card-front">
